--- a/.ENV
+++ b/.ENV
@@ -1,3 +1,8 @@
 CONTROLE_PATRAO=index
 DEFAULT_LAYOUT=painel #template padrão
 TIME=10 #Tempo da Sessão em minutos
+
+MYSQL_HOST=localhost
+MYSQL_DB = simplesMVC
+MYSQL_USER = root
+MYSQL_SENHA= 
