Criação das models e sistema de login

--- a/.ENV
+++ b/.ENV
@@ -1,8 +1,10 @@
 CONTROLE_PATRAO=index
-DEFAULT_LAYOUT=painel #template padrão
-TIME=10 #Tempo da Sessão em minutos
+#template padrão
+DEFAULT_LAYOUT=painel
+#Tempo da Sessão em minutos 
+TIME=10
 
 MYSQL_HOST=localhost
-MYSQL_DB = simplesMVC
-MYSQL_USER = root
+MYSQL_DB=simplesMVC
+MYSQL_USER=root
 MYSQL_SENHA= 
