Alteração de BASE_URL

--- a/.ENV
+++ b/.ENV
@@ -1,3 +1,5 @@
+# Não esqueça da "/" no final do URL
+BASE_URL=http://localhost/sistemas/MVC-Simples-com-Composer/
 CONTROLE_PATRAO=index
 #template padrão
 DEFAULT_LAYOUT=painel
