alteração de permissão

--- a/.ENV
+++ b/.ENV
@@ -6,8 +6,8 @@ DEFAULT_LAYOUT=painel
 #Tempo da Sessão em minutos 
 TIME=10
 
-MYSQL_HOST=localhost
-MYSQL_DB=simplesMVC
-MYSQL_USER=root
-MYSQL_SENHA= 
+MYSQL_HOST=db-powerbi.infra.grancursosonline.com.br
+MYSQL_DB=rmbi
+MYSQL_USER=rt7
+MYSQL_SENHA=xm19ND21ds82183hHG
 
