ajuste de arquitetura

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 # Não esqueça da "/" no final do URL
-BASE_URL=http://localhost/jhony/cadastro-cursos/
+BASE_URL=http://localhost/
 CONTROLE_PATRAO=index
 #template padrão
 DEFAULT_LAYOUT=painel
