--- a/.htaccess
+++ b/.htaccess
@@ -1,14 +1,11 @@
 RewriteEngine On
 
+# Impede o acesso direto ao arquivo .env
+RewriteRule ^\.env$ - [R=404,L]
+
+# Verificar se o arquivo ou diretório não existe
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
-RewriteCond %{REQUEST_FILENAME} !-i
 
-# Esconde o arquivo de variáveis de configuração
-<Files .ENV>
-    Order allow,deny
-    Deny from all
-</Files>
-
-
+# Redirecionar para o arquivo index.php
 RewriteRule ^(.*)$ index.php?url=$1 [QSA,L]
